# WinPlayer-Node

./: .gitignore  Cargo.toml  README.md  binding.gyp  index.d.ts  index.js  package.json  test-emitter.js  test.js  tsconfig.json
emitter/: index.d.ts  index.js  index.ts
src/: jsplayer.rs  jsplayermanager.rs  jstypes.rs  lib.rs  main.cpp  main.rs  player.rs  playermanager.rs  types.rs  updateworker.cpp  updateworker.h  util.rs  winPlayer-node.cpp  wrapper.cpp  wrapper.h
src/lib/: types.h  util.cpp  util.h  winPlayer.cpp  winPlayer.h
src/owo/: mod.rs  player.rs  playermanager.rs  types.rs  util.rs
