[package]
name = "winplayer-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.28"
tokio = { version = "1", features = ["full"] }
napi-derive = "2.12.2"

[dependencies.napi]
version = "2.12.2"
default-features = false
features = [
    "napi8",
    "chrono_date",
    "async",
    "tokio_full"
]

[dependencies.windows]
version = "0.51.1"
features = [
    "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Control",
    "Security_Cryptography_Core",
    "Storage_Streams",
    "System"
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true